apps/99-test/petio/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: petio
spec:
  ports:
    - port: 80
      targetPort: 7777
      protocol: TCP
      name: http
  selector:
    app: petio
